Add gap analysis script for Target handbags data
- Implemented a comprehensive gap analysis tool for Target handbags, including style clustering (K-Means/HDBSCAN), PCA/UMAP, price segmentation, rating quadrants, brand dominance, color diversity, title-keyword co-occurrence, and six practical gap analyses.
- Outputs enriched CSV/JSON files and a markdown report summarizing the analysis.
- Integrated functions for computing style embeddings using CLIP and TF-IDF, assigning price bands, and analyzing ratings and colors.
- Added command-line interface for flexible input/output options and analysis configurations.

--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,10 @@ tqdm
 Pillow
 # CLIP: install from GitHub (no PyPI package):
 #   pip install git+https://github.com/openai/CLIP.git
+
+# Gap analysis (clustering + reports)
+scikit-learn>=1.3.0
+hdbscan>=0.8.33
+umap-learn>=0.5.5
+numpy>=1.24.0
+matplotlib>=3.8.0
